--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
 
      
     <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-FMMG2XHFSE"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-5SMMHBLYCR"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-FMMG2XHFSE');
+  gtag('config', 'G-5SMMHBLYCR');
 </script>
 
 </head>
