--- a/index2.html
+++ b/index2.html
@@ -9,13 +9,13 @@
     <link rel="stylesheet" href="estilo.css">
 
    <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-FMMG2XHFSE"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-5SMMHBLYCR"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-FMMG2XHFSE');
+  gtag('config', 'G-5SMMHBLYCR');
 </script>
     
 </head>
