--- a/index5.html
+++ b/index5.html
@@ -7,14 +7,14 @@
         <meta name="viewport" content="width=device-width,initial-scale=1.0">
         <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.8.0/chart.min.js"></script>
 
- <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-FMMG2XHFSE"></script>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-5SMMHBLYCR"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-FMMG2XHFSE');
+  gtag('config', 'G-5SMMHBLYCR');
 </script>
      
     </head>
