--- a/news-detail.html
+++ b/news-detail.html
@@ -31,13 +31,13 @@ http://www.tooplate.com/view/2098-health
      <link rel="stylesheet" href="css/tooplate-style.css">
 
 <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-FMMG2XHFSE"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-5SMMHBLYCR"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-FMMG2XHFSE');
+  gtag('config', 'G-5SMMHBLYCR');
 </script>
      
 
